--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">Siqi Zhang</div>
+<div class="menu-category">Xiaoyi Qu</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Siqi Zhang</h1>
+<h1>Xiaoyi Qu</h1>
 <div id="subtitle"></div>
 </div>
 <table class="imgtable"><tr><td>
@@ -24,59 +24,29 @@
 <td align="left"><p>Siqi Zhang
 <br />
 <br />
-Department of Applied Mathematics and Statistics (<a href="https://engineering.jhu.edu/ams" target=&ldquo;blank&rdquo;>AMS</a>)
+Department of Industrial and Systems Engineering (<a href="https://engineering.lehigh.edu/ise" target=&ldquo;blank&rdquo;>ISE</a>)
 <br />
-Whiting School of Engineering (<a href="https://engineering.jhu.edu/" target=&ldquo;blank&rdquo;>WSE</a>)
+Rossin School of Engineering (<a href="https://engineering.lehigh.edu/" target=&ldquo;blank&rdquo;>RSE</a>)
 <br />
-Johns Hopkins University (<a href="https://www.jhu.edu/" target=&ldquo;blank&rdquo;>JHU</a>)
+Lehigh University (<a href="https://www.lehigh.edu/" target=&ldquo;blank&rdquo;>LU</a>)
 <br />
-<br />
-<a href="https://scholar.google.com/citations?user=0M171lEAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> 
-<br />
-<a href="https://www.linkedin.com/in/siqi-zhang-uiuc/" target=&ldquo;blank&rdquo;>LinkedIn</a></p>
+<a href="https://www.linkedin.com" target=&ldquo;blank&rdquo;>LinkedIn</a></p>
 </td></tr></table>
 <h2>Introduction</h2>
-<p>Hi, this is Siqi Zhang. Now I am a Rufus Isaacs Postdoctoral Fellow in the Department of Applied Mathematics and Statistics (AMS) of Johns Hopkins University (JHU). 
-<br />
-<br />
-I got my Ph.D. degree from the ISE Department of UIUC in June 2022, supervised by <a href="https://odi.inf.ethz.ch/niaohe" target=&ldquo;blank&rdquo;>Prof. Niao He</a>. 
-
+<p>Hi, this is Xiaoyi Qu. Now I am a first year PhD student in the Department of Industrial and Systems Engineering of Lehigh University. I am currently advised by Professor. 
 <br />
 </p>
-<h2>Research Intersts</h2>
-<p>Broadly speaking, I am interested in <b>optimization</b> and its applications in <b>machine learning</b>. Recently, I am focusing on the following topics:</p>
-<ul>
-<li><p>Nonconvex optimization</p>
-</li>
-<li><p>Minimax optimization</p>
-</li>
-<li><p>Lower bound analysis in optimization </p>
-</li>
-<li><p>Intersection of opitmization with sampling, control and reinforcement learning
-</p>
-</li>
-</ul>
-<h2>News</h2>
-<ul>
-<li><p>[2022.06] Successfully passed the Ph.D. dissertation defense!</p>
-</li>
-<li><p>[2021.05] One paper is accepted to UAI 2021, thanks to all the wonderful collaborators!</p>
-</li>
-<li><p>[2021.05] I will work as a research intern in <a href="https://www.merl.com/" target=&ldquo;blank&rdquo;>MERL</a> this summer.
-</p>
-</li>
-</ul>
 <h2>Contact</h2>
 <ul>
-<li><p>Email: szhan207 AT jhu DOT edu</p>
+<li><p>Email: xiq322 AT lehigh DOT edu</p>
 </li>
-<li><p>Address: Wyman Park Building, Johns Hopkins University, Homewood Campus, Baltimore, MD 21218
+<li><p>Address: Mohler Lab
 <br /></p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-11-16 10:50:32 Eastern Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-12-26 10:50:32 Eastern Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
