--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <div id="subtitle"></div>
 </div>
 <table class="imgtable"><tr><td>
-<img src="figs/SZ_Logo.jpg" alt="alt text" width="180px" height="240px" />&nbsp;</td>
-<td align="left"><p>Siqi Zhang
+<img src="img/p1.jpg" alt="alt text" width="180px" height="240px" />&nbsp;</td>
+<td align="left"><p>Xiaoyi Qu
 <br />
 <br />
 Department of Industrial and Systems Engineering (<a href="https://engineering.lehigh.edu/ise" target=&ldquo;blank&rdquo;>ISE</a>)
@@ -33,7 +33,7 @@ Lehigh University (<a href="https://www.lehigh.edu/" target=&ldquo;blank&rdquo;>
 <a href="https://www.linkedin.com" target=&ldquo;blank&rdquo;>LinkedIn</a></p>
 </td></tr></table>
 <h2>Introduction</h2>
-<p>Hi, this is Xiaoyi Qu. Now I am a first year PhD student in the Department of Industrial and Systems Engineering of Lehigh University. I am currently advised by Professor. 
+<p>This is Xiaoyi Qu. I am a first year PhD student in the Department of Industrial and Systems Engineering of Lehigh University. I am currently advised by Professor. 
 <br />
 </p>
 <h2>Contact</h2>
@@ -44,11 +44,6 @@ Lehigh University (<a href="https://www.lehigh.edu/" target=&ldquo;blank&rdquo;>
 <br /></p>
 </li>
 </ul>
-<div id="footer">
-<div id="footer-text">
-Page generated 2022-12-26 10:50:32 Eastern Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
-</div>
-</div>
 </td>
 </tr>
 </table>
