--- a/index.html
+++ b/index.html
@@ -32,18 +32,32 @@ Lehigh University (<a href="https://www.lehigh.edu/" target=&ldquo;blank&rdquo;>
 <br />
 <a href="https://www.linkedin.com" target=&ldquo;blank&rdquo;>LinkedIn</a></p>
 </td></tr></table>
+  
 <h2>Introduction</h2>
-<p>This is Xiaoyi Qu. I am a first year PhD student in the Department of Industrial and Systems Engineering of Lehigh University. I am currently advised by Professor. 
+<p>Xiaoyi Qu is currently a first year PhD student in the Department of Industrial and Systems Engineering of Lehigh University. 
+His advisor is Prof.<a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;>Prof. Daniel P. Robinson</a>
 <br />
 </p>
+  
+<h2>Education</h2>
+<ul>
+<li><p>Ph.D., Industrial Engineering, Lehigh University, Bethlehem, PA, USA, 2022&ndash;current</p>
+</li>
+<li><p>B.S., Mathematical Science, University of Michigan, Ann Arbor, MI, USA, 2019&ndash;2022</p>
+</li>
+<li><p> Computational Mathematics, Dalian University of Technology, Dalian, China, 2017&ndash;2019</p>
+</li>
+</ul>
+  
 <h2>Contact</h2>
 <ul>
 <li><p>Email: xiq322 AT lehigh DOT edu</p>
 </li>
-<li><p>Address: Mohler Lab
+<li><p>Address: 200 W Packer Ave. Bethlehem, PA 18015
 <br /></p>
 </li>
 </ul>
+  
 </td>
 </tr>
 </table>
