--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Lehigh University (<a href="https://www.lehigh.edu/" target=&ldquo;blank&rdquo;>
   
 <h2>Introduction</h2>
 <p>Xiaoyi Qu is currently a first year PhD student in the Department of Industrial and Systems Engineering of Lehigh University. 
-His advisor is Prof.<a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;>Prof. Daniel P. Robinson</a>
+His advisor is Prof.<a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;>Daniel P. Robinson</a>
 <br />
 </p>
   
