--- a/index.html
+++ b/index.html
@@ -26,16 +26,14 @@
 <br />
 Department of Industrial and Systems Engineering (<a href="https://engineering.lehigh.edu/ise" target=&ldquo;blank&rdquo;>ISE</a>)
 <br />
-Rossin School of Engineering (<a href="https://engineering.lehigh.edu/" target=&ldquo;blank&rdquo;>RSE</a>)
+Rossin School of Engineering, Lehigh University
 <br />
-Lehigh University (<a href="https://www.lehigh.edu/" target=&ldquo;blank&rdquo;>LU</a>)
-<br />
-<a href="https://www.linkedin.com" target=&ldquo;blank&rdquo;>LinkedIn</a></p>
+<a href="https://www.linkedin.com/in/xiaoyi-qu-20590018b/" target=&ldquo;blank&rdquo;>LinkedIn</a></p>
 </td></tr></table>
   
 <h2>Introduction</h2>
 <p>Xiaoyi Qu is currently a first year PhD student in the Department of Industrial and Systems Engineering of Lehigh University. 
-His advisor is Prof.<a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;>Daniel P. Robinson</a>
+His advisor is Prof.<a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;> Daniel P. Robinson</a>
 <br />
 </p>
   
