--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ Rossin School of Engineering, Lehigh University
 </td></tr></table>
   
 <h2>Introduction</h2>
-<p>Xiaoyi Qu is currently a first year PhD student in the Department of Industrial and Systems Engineering of Lehigh University. 
-His advisor is Prof.<a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;> Daniel P. Robinson</a>
+<p>Xiaoyi Qu is currently a second year PhD student in the Department of Industrial and Systems Engineering of Lehigh University, 
+  working with Prof.<a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;> Daniel P. Robinson. His current research focuses on developing proximal methods for constrained structured optimization problems.</a>
 <br />
 </p>
   
