--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Rossin School of Engineering, Lehigh University
   
 <h2>Introduction</h2>
 <p>Xiaoyi Qu is currently a second year PhD student in the Department of Industrial and Systems Engineering of Lehigh University, 
-  working with Prof.<a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;> Daniel P. Robinson. His current research focuses on developing proximal methods for constrained structured optimization problems.</a>
+  working with Prof.<a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;> Daniel P. Robinson</a>. His current research focuses on developing proximal methods for constrained structured optimization problems.</a>
 <br />
 </p>
   
@@ -46,7 +46,15 @@ Rossin School of Engineering, Lehigh University
 <li><p> Computational Mathematics, Dalian University of Technology, Dalian, China, 2017&ndash;2019</p>
 </li>
 </ul>
-  
+
+<h2>Publications</h2>
+<ul>
+<li><p>Proximal Gradient Method for Constrained Optimization [<a href="https://arxiv.org/abs/2404.07460">pdf</a>] <br />
+Yutong Dai, <b>Xiaoyi Qu</b>, Daniel P. Robinson. <br />
+arXiv preprint, 2024</p>
+</li>
+</ul>
+
 <h2>Contact</h2>
 <ul>
 <li><p>Email: xiq322 AT lehigh DOT edu</p>
