--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="img/snapshot.jpg" alt="alt text" width="300px" height="300px" />&nbsp;</td>
+<figcaption>Crater lake, Changbai Mountain</figcaption>
 <td align="left"><p>Xiaoyi Qu
 <br />
 <br />
