--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 <div id="subtitle"></div>
 </div>
 <table class="imgtable"><tr><td>
-<img src="img/snapshot.jpg" alt="alt text" width="300px" height="300px" />&nbsp;</td>
-<figcaption>Crater lake, Changbai Mountain</figcaption>
+<img src="img/snapshot.jpg" alt="alt text" width="300px" height="300px" />&nbsp;
+<figcaption>Crater lake, Changbai Mountain, China</figcaption>
+</td>
 <td align="left"><p>Xiaoyi Qu
 <br />
 <br />
