--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="img/snapshot.jpg" alt="alt text" width="300px" height="300px" />&nbsp;
-<figcaption>Crater lake, Changbai Mountain, China</figcaption>
+<figcaption>Tianchi, Changbai Mountain, China</figcaption>
 </td>
 <td align="left"><p>Xiaoyi Qu
 <br />
