--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Rossin School of Engineering, Lehigh University
   
 <h2>Introduction</h2>
 <p>Xiaoyi Qu is currently a second year PhD student in the Department of Industrial and Systems Engineering of Lehigh University, 
-  working with Prof.<a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;> Daniel P. Robinson</a>. His current research focuses on developing proximal methods for constrained structured optimization problems.</a>
+  working with Prof.<a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;> Daniel P. Robinson</a>. His current research focuses on constrained structured optimization problems.</a>
 <br />
 </p>
   
@@ -49,8 +49,16 @@ Rossin School of Engineering, Lehigh University
 </li>
 </ul>
 
-<h2>Publications</h2>
+<h2>Preprints</h2>
 <ul>
+<li><p>Automated Joint Structured Pruning and Quantization for Efficient Neural Network Training and Compression <br />
+<b>Xiaoyi Qu</b>, David Aponte, Colby Banbury, Daniel Robinson, Tianyu Ding, Kazuhito Koishida, Ilya Zharkov, Tianyi Chen. <br />
+</p>
+</li>
+<li><p>HESSO: Towards Automatic Efficient and User Friendly Any Neural Network Training and Pruning [<a href="https://arxiv.org/abs/2409.09085">pdf</a>] <br />
+Tianyi Chen, <b>Xiaoyi Qu</b>, David Aponte, Colby Banbury, Jongwoo Ko, Tianyu Ding, Yong Ma, Vladimir Lyapunov, Ilya Zharkov, Luming Liang. <br />
+arXiv preprint, 2024</p>
+</li>
 <li><p>Proximal Gradient Method for Constrained Optimization [<a href="https://arxiv.org/abs/2404.07460">pdf</a>] <br />
 Yutong Dai, <b>Xiaoyi Qu</b>, Daniel P. Robinson. <br />
 arXiv preprint, 2024</p>
