--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Department of Industrial and Systems Engineering (<a href="https://engineering.l
 <br />
 Rossin School of Engineering, Lehigh University
 <br />
-<a href="https://www.linkedin.com/in/xiaoyi-qu-20590018b/" target=&ldquo;blank&rdquo;>LinkedIn</a></p>
+<a href="https://www.linkedin.com/in/xiaoyi-qu-20590018b/" target=&ldquo;blank&rdquo;>LinkedIn <a href="https://github.com/Xiaoyi-Qu" target=&ldquo;blank&rdquo;>Github </a></p>
 </td></tr></table>
   
 <h2>Introduction</h2>
