--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Rossin School of Engineering, Lehigh University
 </td></tr></table>
   
 <h2>Introduction</h2>
-<p>Xiaoyi Qu is currently a second year PhD student in the Department of Industrial and Systems Engineering of Lehigh University, 
+<p>Xiaoyi Qu is currently a third year PhD student in the Department of Industrial and Systems Engineering of Lehigh University, 
   working with Prof.<a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;> Daniel P. Robinson</a>. His current research focuses on constrained structured optimization problems.</a>
 <br />
 </p>
