--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@ Rossin School of Engineering, Lehigh University
 </li>
 </ul>
 
-<h2>Publications<h2>
+<h2>Publications</h2>
 <ul>
 <li><p>Automated Joint Structured Pruning and Quantization for Efficient Neural Network Training and Compression [<a href="https://arxiv.org/abs/2502.16638">pdf</a>][<a href="https://arxiv.org/abs/2502.16638">Code</a>] <br />
 <b>Xiaoyi Qu</b>, David Aponte, Colby Banbury, Daniel Robinson, Tianyu Ding, Kazuhito Koishida, Ilya Zharkov, Tianyi Chen. <br />
+CVPR, 2025<br />
 </p>
 </li>
 <ul>
