--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@ Rossin School of Engineering, Lehigh University
 
 <h2>Publications</h2>
 <ul>
-<li><p>Automated Joint Structured Pruning and Quantization for Efficient Neural Network Training and Compression [<a href="https://arxiv.org/abs/2502.16638">pdf</a>][<a href="https://arxiv.org/abs/2502.16638">Code</a>] <br />
+<li><p>Automated Joint Structured Pruning and Quantization for Efficient Neural Network Training and Compression [<a href="https://arxiv.org/abs/2502.16638">pdf</a>][<a href="https://github.com/microsoft/geta">Code</a>] <br />
 <b>Xiaoyi Qu</b>, David Aponte, Colby Banbury, Daniel Robinson, Tianyu Ding, Kazuhito Koishida, Ilya Zharkov, Tianyi Chen. <br />
-CVPR, 2025<br />
+Computer Vision and Pattern Recognition (CVPR), 2025<br />
 </p>
 </li>
-<ul>
+</ul>
 
 <h2>Preprints</h2>
 <ul>
-<li><p>HESSO: Towards Automatic Efficient and User Friendly Any Neural Network Training and Pruning [<a href="https://arxiv.org/abs/2409.09085">pdf</a>][<a href="https://arxiv.org/abs/2502.16638">Code</a>] <br />
+<li><p>HESSO: Towards Automatic Efficient and User Friendly Any Neural Network Training and Pruning [<a href="https://arxiv.org/abs/2409.09085">pdf</a>][<a href="https://github.com/microsoft/only_train_once">Code</a>] <br />
 Tianyi Chen, <b>Xiaoyi Qu</b>, David Aponte, Colby Banbury, Jongwoo Ko, Tianyu Ding, Yong Ma, Vladimir Lyapunov, Ilya Zharkov, Luming Liang. <br />
 arXiv preprint, 2024</p>
 </li>
