--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Rossin School of Engineering, Lehigh University
 <ul>
 <li><p>Automated Joint Structured Pruning and Quantization for Efficient Neural Network Training and Compression [<a href="https://arxiv.org/abs/2502.16638">pdf</a>][<a href="https://github.com/microsoft/geta">Code</a>] <br />
 <b>Xiaoyi Qu</b>, David Aponte, Colby Banbury, Daniel Robinson, Tianyu Ding, Kazuhito Koishida, Ilya Zharkov, Tianyi Chen. <br />
-Computer Vision and Pattern Recognition (CVPR), 2025<br />
+The IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), 2025<br />
 </p>
 </li>
 </ul>
