--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Rossin School of Engineering, Lehigh University
   
 <h2>Introduction</h2>
 <p>Xiaoyi Qu is currently a third year PhD student in the Department of Industrial and Systems Engineering of Lehigh University, 
-  working with Prof.<a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;> Daniel P. Robinson</a>. His current research focuses on constrained structured optimization problems.</a>
+  working with Prof.<a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;> Daniel P. Robinson</a>. His current research focuses on constrained structured optimization problems. Recently, he has become interested in efficient AI to enhance the training and inference efficiency of deep neural networks. </a>
 <br />
 </p>
   
