--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Rossin School of Engineering, Lehigh University
   
 <h2>Introduction</h2>
 <p>Xiaoyi Qu is currently a third year PhD student in the Department of Industrial and Systems Engineering of Lehigh University, 
-  working with Prof.<a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;> Daniel P. Robinson</a>. His current research focuses on constrained structured optimization problems. Recently, he has become interested in efficient AI to enhance the training and inference efficiency of deep neural networks. </a>
+  working with Prof.<a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;> Daniel P. Robinson</a>. His current research focuses on constrained structured optimization problems. Recently, he has become interested in enhancing the training and inference efficiency of deep neural networks. </a>
 <br />
 </p>
   
@@ -49,7 +49,7 @@ Rossin School of Engineering, Lehigh University
 </li>
 </ul>
 
-<h2>Publications</h2>
+<!-- <h2>Publications</h2>
 <ul>
 <li><p>Automated Joint Structured Pruning and Quantization for Efficient Neural Network Training and Compression [<a href="https://arxiv.org/abs/2502.16638">pdf</a>][<a href="https://github.com/microsoft/geta">Code</a>] <br />
 <b>Xiaoyi Qu</b>, David Aponte, Colby Banbury, Daniel Robinson, Tianyu Ding, Kazuhito Koishida, Ilya Zharkov, Tianyi Chen. <br />
@@ -68,7 +68,94 @@ arXiv preprint, 2024</p>
 Yutong Dai, <b>Xiaoyi Qu</b>, Daniel P. Robinson. <br />
 arXiv preprint, 2024</p>
 </li>
-</ul>
+</ul> -->
+
+<style>
+.project-container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.project {
+  display: flex;
+  flex-direction: row;
+  gap: 1.5rem;
+  align-items: flex-start;
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 1.5rem;
+}
+
+.project img {
+  width: 400px;
+  height: auto;
+  object-fit: contain;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+}
+
+.project-text {
+  flex: 1;
+}
+
+.project-text b {
+  color: #333;
+}
+</style>
+
+<h2>Projects</h2>
+<div class="project-container">
+
+  <!-- Project 1 -->
+  <div class="project">
+    <img src="img/quantization.png" alt="GETA Project Image">
+    <div class="project-text">
+      <p>
+        <strong>Automated Joint Structured Pruning and Quantization for Efficient Neural Network Training and Compression</strong> <br />
+        <b>Xiaoyi Qu</b>, David Aponte, Colby Banbury, Daniel P. Robinson, Tianyu Ding, Kazuhito Koishida, Ilya Zharkov, Tianyi Chen. <br />
+        <i style="color: #555;">Computer Vision and Pattern Recognition (CVPR), 2025</i> <br />
+        [<a href="https://cvpr.thecvf.com/virtual/2025/poster/34889">Paper</a>]
+        [<a href="https://arxiv.org/abs/2502.16638">arXiv</a>]
+        [<a href="https://github.com/microsoft/geta">Code</a>] <br />
+      </p>
+    </div>
+  </div>
+
+  <!-- Project 2 -->
+  <div class="project">
+    <img src="img/hesso.png" alt="HESSO Project Image">
+    <div class="project-text">
+      <p>
+        <strong>HESSO: Towards Automatic Efficient and User Friendly Any Neural Network Training and Pruning</strong> <br />
+        <b>Xiaoyi Qu</b>, David Aponte, Colby Banbury, Jongwoo Ko, Tianyu Ding, Yong Ma, Vladimir Lyapunov, Ilya Zharkov, Luming Liang, Tianyi Chen. <br />
+        <i>arXiv preprint, 2024</i> <br />
+        [<a href="https://arxiv.org/abs/2409.09085">arXiv</a>]
+        [<a href="https://github.com/microsoft/only_train_once">Code</a>] <br />
+      </p>
+    </div>
+  </div>
+
+  <!-- Project 3 -->
+  <div class="project">
+    <img src="img/PG.png" alt="alpha">
+    <div class="project-text">
+      <p>
+        <strong>Proximal Gradient Method for Constrained Optimization</strong> <br />
+        Yutong Dai, <b>Xiaoyi Qu</b>, Daniel P. Robinson. <br />
+        <i style="color: Tomato;"> 2025 Van Hoesen Family Best Publication Award (Honorable Mention) </i> <br />
+        <i>arXiv preprint, 2024</i> <br />
+        [<a href="https://arxiv.org/abs/2404.07460">arXiv</a>] <br />
+      </p>
+      <p>
+        <strong>A Proximal Gradient Method for Regularized Optimization with General Constraints</strong> <br />
+        <!-- Yutong Dai, <b>Xiaoyi Qu</b>, Daniel P. Robinson. <br /> -->
+        <i>Working Paper. (Coming soon)</i> <br />
+        <!-- [<a href="https://arxiv.org/abs/2404.07460">arXiv</a>] <br /> -->
+      </p>
+    </div>
+  </div>
+
+</div>
 
 <h2>Contact</h2>
 <ul>
