--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ arXiv preprint, 2024</p>
         <strong>Proximal Gradient Method for Constrained Optimization</strong> <br />
         Yutong Dai, <b>Xiaoyi Qu</b>, Daniel P. Robinson. <br />
         <i style="color: Tomato;"> 2025 Van Hoesen Family Best Publication Award (Honorable Mention) </i> <br />
-        <i>arXiv preprint, 2024</i> <br />
+        <i>Accepted by SIAM Journal on Optimization</i> <br />
         [<a href="https://arxiv.org/abs/2404.07460">arXiv</a>] <br />
       </p>
       <p>
