--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ arXiv preprint, 2024</p>
     <img src="img/PG.png" alt="alpha">
     <div class="project-text">
       <p>
-        <strong>Proximal Gradient Method for Constrained Optimization</strong> <br />
+        <strong>A Proximal Gradient Method for Equality Constrained Optimization</strong> <br />
         Yutong Dai, <b>Xiaoyi Qu</b>, Daniel P. Robinson. <br />
         <i style="color: Tomato;"> 2025 Van Hoesen Family Best Publication Award (Honorable Mention) </i> <br />
         <i>Accepted by SIAM Journal on Optimization</i> <br />
