--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+<!-- <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
@@ -68,7 +68,7 @@ arXiv preprint, 2024</p>
 Yutong Dai, <b>Xiaoyi Qu</b>, Daniel P. Robinson. <br />
 arXiv preprint, 2024</p>
 </li>
-</ul> -->
+</ul>
 
 <style>
 .project-container {
@@ -171,4 +171,6 @@ arXiv preprint, 2024</p>
 </table>
 </body>
 </html>
+
+-->
 
