--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ arXiv preprint, 2024</p>
 <h2>Projects</h2>
 <div class="project-container">
 
-  <!-- Project 1 -->
+<!-- Project 1
   <div class="project">
     <img src="img/quantization.png" alt="GETA Project Image">
     <div class="project-text">
@@ -121,7 +121,7 @@ arXiv preprint, 2024</p>
     </div>
   </div>
 
-  <!-- Project 2 -->
+  <!-- Project 2
   <div class="project">
     <img src="img/hesso.png" alt="HESSO Project Image">
     <div class="project-text">
@@ -135,7 +135,7 @@ arXiv preprint, 2024</p>
     </div>
   </div>
 
-  <!-- Project 3 -->
+  <!-- Project 3
   <div class="project">
     <img src="img/PG.png" alt="alpha">
     <div class="project-text">
@@ -148,9 +148,9 @@ arXiv preprint, 2024</p>
       </p>
       <p>
         <strong>A Proximal Gradient Method for Regularized Optimization with General Constraints</strong> <br />
-        <!-- Yutong Dai, <b>Xiaoyi Qu</b>, Daniel P. Robinson. <br /> -->
+         Yutong Dai, <b>Xiaoyi Qu</b>, Daniel P. Robinson. <br />
         <i>Working Paper. (Coming soon)</i> <br />
-        <!-- [<a href="https://arxiv.org/abs/2404.07460">arXiv</a>] <br /> -->
+         [<a href="https://arxiv.org/abs/2404.07460">arXiv</a>] <br />
       </p>
     </div>
   </div>
