--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
 				<p> 
 					<a href="https://www.semanticscholar.org/author/Xiaoyi-Qu/2321431981", target="_blank"><img src="./img/semantics_scholar.png" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://github.com/Xiaoyi-Qu", target="_blank"><img src="./img/git.jpeg" height="30px" style="margin-bottom:-3px"></a>
+					<a href="https://www.linkedin.com/in/xiaoyi-qu-20590018b/", target="_blank"><img src="./img/linkedin.png" height="50px" style="margin-bottom:-13px"></a>
 					<!--<a href="index_zw.html", target="_blank"><img src="./pic/zw.png" height="30px" style="margin-bottom:-3px"></a>-->
 				</p><br>
 			</td>
 			<td>
-				<img src="./img/XiaoyiProfile.jpg" border="0" width="200"><br>
+				<img src="./img/snapshot.jpg" border="0" width="200"><br>
 			</td>
 		</tr>
 		<tr>
@@ -112,7 +113,6 @@
     </ul>
 
 <h2>Projects </h2>
-<h3>#：Co-ﬁrst authors   &nbsp&nbsp *：Corresponding author</h3>
 
 <!--<h4>Selected Preprint Papers</h4>-->
 <table id="tbPublications" width="100%">
@@ -120,12 +120,12 @@
 
 <tr>	
 	<td width="206">
-	<img src="./img/quantization.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+	<img src="./img/quantization.png" width="250" height = "100" style="box-shadow: 4px 4px 8px #888">
 	</td>		
-	<td> <a href="https://arxiv.org/abs/2403.01144" target="_blank">Extrapolated plug-and-play three-operator splitting methods for nonconvex optimization with applications to image restoration</a><br>
-	Zhongming Wu#, <b>Chaoyan Huang</b>#, Tieyong Zeng<sup>&#8727</sup>
-	<p><em>SIAM Journal on Imaging Sciences</em> (<i><b>SIIMS</b></i>), 2024. <br>
-	<a href="paper/siam_pnp.pdf", target="_blank">[Paper]</a> <a href="https://github.com/Huang-chao-yan/convergent_pnp", target="_blank">[Code]</a>
+	<td> <a href="https://arxiv.org/abs/2403.01144" target="_blank">Automated Joint Structured Pruning and Quantization for Efficient Neural Network Training and Compression</a><br>
+		<b>Xiaoyi Qu</b>, David Aponte, Colby Banbury, Daniel Robinson, Tianyu Ding, Kazuhito Koishida, Ilya Zharkov, Tianyi Chen.<sup>&#8727</sup>
+	<p><em>The IEEE/CVF Conference on Computer Vision and Pattern Recognition (<i><b>CVPR</b></i>), 2025 <br>
+	<a href="https://arxiv.org/abs/2502.16638", target="_blank">[Paper]</a> <a href="https://github.com/microsoft/geta", target="_blank">[Code]</a>
 	</td>
 </tr>
 <tr></tr>
