--- a/index.html
+++ b/index.html
@@ -97,10 +97,13 @@
   
 <h2>Biography</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-    Xiaoyi Qu is currently a third year PhD student in the Department of Industrial and Systems Engineering 
-    of Lehigh University, working with Prof.<a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;> Daniel P. Robinson</a>. 
-    His current research focuses on constrained structured optimization problems. Recently, 
-    he has become interested in enhancing the training and inference efficiency of deep neural networks.
+	Xiaoyi Qu is a third-year Ph.D. student in the Department of Industrial and Systems Engineering at Lehigh University, 
+	advised by Prof.<a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;> Daniel P. Robinson</a>. 
+	In the summer of 2024, he interned at Microsoft's Applied Sciences Group 
+	(<a href="https://www.microsoft.com/applied-sciences/?msockid=2aaecc043ad26f493eb7d9693b836e27" target=&ldquo;blank&rdquo;>ASG</a>). 
+	His research centers on constrained structured optimization and efficient AI techniques such as pruning and 
+	quantization. More recently, he has become particularly interested in improving the training and inference efficiency 
+	of large language models (LLMs).
 
     <h2>Education</h2>
     <ul>
@@ -114,18 +117,20 @@
 
 <h2>Projects </h2>
 
-<!--<h4>Selected Preprint Papers</h4>-->
 <table id="tbPublications" width="100%">
 	<tbody>
 
 <tr>	
 	<td width="206">
-	<img src="./img/quantization.png" width="250" height = "100" style="box-shadow: 4px 4px 8px #888">
+	<img src="./img/geta.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 	</td>		
-	<td> <a href="https://arxiv.org/abs/2403.01144" target="_blank">Automated Joint Structured Pruning and Quantization for Efficient Neural Network Training and Compression</a><br>
-		<b>Xiaoyi Qu</b>, David Aponte, Colby Banbury, Daniel Robinson, Tianyu Ding, Kazuhito Koishida, Ilya Zharkov, Tianyi Chen.<sup>&#8727</sup>
-	<p><em>The IEEE/CVF Conference on Computer Vision and Pattern Recognition (<i><b>CVPR</b></i>), 2025 <br>
-	<a href="https://arxiv.org/abs/2502.16638", target="_blank">[Paper]</a> <a href="https://github.com/microsoft/geta", target="_blank">[Code]</a>
+	<td>
+        <a href="./img/geta.png" target="_blank">Automated Joint Structured Pruning and Quantization for Efficient Neural Network Training and Compression</a><br />
+        <b>Xiaoyi Qu</b>, David Aponte, Colby Banbury, Daniel P. Robinson, Tianyu Ding, Kazuhito Koishida, Ilya Zharkov, Tianyi Chen. <br />
+        <i style="color: #555;">Computer Vision and Pattern Recognition (<i><b>CVPR</b></i>), 2025</i> <br />
+        [<a href="https://cvpr.thecvf.com/virtual/2025/poster/34889">Paper</a>]
+        [<a href="https://arxiv.org/abs/2502.16638">arXiv</a>]
+        [<a href="https://github.com/microsoft/geta">Code</a>] <br />
 	</td>
 </tr>
 <tr></tr>
@@ -134,12 +139,14 @@
 
 <tr>	
 	<td width="206">
-	<img src="./pic/jsc.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+	<img src="./img/hesso_new.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 	</td>		
-	<td> <a href="./img/quantization.png" target="_blank">An efficient inexact Gauss–Seidel-based algorithm for image restoration with mixed noise</a><br>
-	Tingting Wu, Yue Min, <b>Chaoyan Huang</b>, Zhi Li, Zhongming Wu, Tieyong Zeng<sup>&#8727</sup>
-	<p><em>Journal of Scientific Computing </em> (<i><b>JSC</b></i>), 2024. <br>
-	<a href="paper/s10915-024-02510-8.pdf", target="_blank">[Paper]</a> 
+	<td>
+		<a href="./img/hesso_new.png" target="_blank">HESSO: Towards Automatic Efficient and User Friendly Any Neural Network Training and Pruning</a><br />
+        <b>Xiaoyi Qu</b>, David Aponte, Colby Banbury, Jongwoo Ko, Tianyu Ding, Yong Ma, Vladimir Lyapunov, Ilya Zharkov, Luming Liang, Tianyi Chen. <br />
+        <i>arXiv preprint, 2024</i> <br />
+        [<a href="https://arxiv.org/abs/2409.09085">arXiv</a>]
+        [<a href="https://github.com/microsoft/only_train_once">Code</a>] <br /> 
 	</td>
 </tr>
 <tr></tr>
@@ -148,13 +155,13 @@
 
 <tr>	
 	<td width="206">
-	<img src="./img/quantization.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+	<img src="./img/PG_equality.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 	</td>		
-	<td> <a href="https://www.aimsciences.org/article/doi/10.3934/ipi.2023033" target="_blank">Finding robust minimizer for non-convex phase retrieval</a><br>
-	Tingting Wu, <b>Chaoyan Huang</b>, Xiaoyu Gu, Jianwei Niu, Tieyong Zeng<sup>&#8727</sup>
-	<p><em>Inverse Problems and Imaging</em> (<i><b>IPI</b></i>), 2024. <br>
-	<a href="paper/10.3934_ipi.2023033.pdf", target="_blank">[Paper]</a>
-	<a href="https://github.com/Huang-chao-yan/phaseBDCA", target="_blank">[Code]</a>
+	<td> <a href="./img/PG_equality.png" target="_blank"> A Proximal Gradient Method for Equality Constrained Optimization</a> <br />
+        [<img class="eq" src="./img/7227645438722938594-130.png" alt="alpha" style="vertical-align: -1px" />] Yutong Dai, <b>Xiaoyi Qu</b>, Daniel P. Robinson. <br />
+        <i style="color: Tomato;"> 2025 Van Hoesen Family Best Publication Award (Honorable Mention) </i> <br />
+        <i>Accepted by SIAM Journal on Optimization (<i><b>SIOPT</b></i>) </i>, 2025 <br />
+        [<a href="https://arxiv.org/abs/2404.07460">arXiv</a>] <br />
 	</td>
 </tr>
 <tr></tr>
@@ -163,35 +170,19 @@
 
 <tr>	
 	<td width="206">
-	<img src="./img/quantization.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+	<img src="./img/PG_general.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 </td>	
-<td> <a href="https://www.sciencedirect.com/science/article/pii/S003132032300434X" target="_blank">Single-particle reconstruction in Cryo-Em based on three-dimensional weighted nuclear norm minimization</a><br>
-	<b>Chaoyan Huang</b>, Tingting Wu, Juncheng Li, Bin Dong, Tieyong Zeng<sup>&#8727</sup>
-	<p><em>Pattern Recognition</em> (<i><b>PR</b></i>), 2023. <br>
-	<a href="paper/cryoEM.pdf", target="_blank">[Paper]</a>
-	<a href="https://github.com/Huang-chao-yan/cryoEM", target="_blank">[Code]</a>
-    <a href="https://drive.google.com/drive/folders/1-dSDD4T89dV20YpJjx1D8xwOyUyBVJG3?usp=sharing",target="_blank">[Code]</a>
+<td> <a href="./img/PG_general.png" target="_blank">A Proximal Gradient Method for Regularization Optimization with General Constraints</a><br>
+	[<img class="eq" src="./img/7227645438722938594-130.png" alt="alpha" style="vertical-align: -1px" />] Frank E. Curtis, <b>Xiaoyi Qu </b>, Daniel P. Robinson. <br>
+	<i>Working Paper. (Coming soon)</i> <br />
 	</td>
     </tr>
 	<tr></tr>
 	<tr></tr>
 	<tr></tr>	
     
-    <tr>	
-		<td width="206">
-		<img src="./img/quantization.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://epubs.siam.org/doi/full/10.1137/22M152462X" target="_blank">Spherical image inpainting with frame transformation and data-driven prior deep networks</a><br>
-		Jianfei Li#, <b>Chaoyan Huang</b>#, Raymond Chan, Han Feng<sup>&#8727</sup>, Micheal Ng, Tieyong Zeng
-		<p><em>SIAM Journal on Imaging Sciences</em> (<i><b>SIIMS</b></i>), 2023. <br>
-        <a href="paper/siam.pdf", target="_blank">[Paper]</a> <a href="paper/22m152462x.pdf", target="_blank">[Paper]</a>
-		<!--<a href="https://github.com/Huang-chao-yan/QWNNM", target="_blank">[Code]</a> -->
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>	
--->
+     
+
 </tbody></table>
 
 
@@ -204,7 +195,7 @@
 <div>
 
 <br>
-&copy; Chaoyan | Last updated: 2024-6
+&copy; Xiaoyi | Last updated: 2025-8
 </center>
 </p>
 
