--- a/index.html
+++ b/index.html
@@ -100,20 +100,20 @@
 	Xiaoyi Qu is a third-year Ph.D. student in the Department of Industrial and Systems Engineering at Lehigh University, 
 	advised by Prof.<a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;> Daniel P. Robinson</a>. 
 	In the summer of 2024, he interned at Microsoft's Applied Sciences Group 
-	(<a href="https://www.microsoft.com/applied-sciences/?msockid=2aaecc043ad26f493eb7d9693b836e27" target=&ldquo;blank&rdquo;>ASG</a>). 
+	(<a href="https://www.microsoft.com/applied-sciences/?msockid=2aaecc043ad26f493eb7d9693b836e27" target=&ldquo;blank&rdquo;>ASG</a>) working on model compression. 
 	His research centers on constrained structured optimization and efficient AI techniques such as pruning and 
 	quantization. More recently, he has become particularly interested in improving the training and inference efficiency 
 	of large language models (LLMs).
 
-    <h2>Education</h2>
-    <ul>
-    <li><p>Ph.D., Industrial Engineering, Lehigh University, Bethlehem, PA, USA, 2022&ndash;current</p>
-    </li>
-    <li><p>B.S., Mathematical Science, University of Michigan, Ann Arbor, MI, USA, 2019&ndash;2022</p>
-    </li>
-    <li><p> Computational Mathematics, Dalian University of Technology, Dalian, China, 2017&ndash;2019</p>
-    </li>
-    </ul>
+<h2>Education</h2>
+<ul>
+<li><p>Ph.D., Industrial Engineering, Lehigh University, Bethlehem, PA, USA, 2022&ndash;current</p>
+</li>
+<li><p>B.S., Mathematical Science, University of Michigan, Ann Arbor, MI, USA, 2019&ndash;2022</p>
+</li>
+<li><p> Computational Mathematics, Dalian University of Technology, Dalian, China, 2017&ndash;2019</p>
+</li>
+</ul>
 
 <h2>Projects </h2>
 
@@ -180,10 +180,14 @@
 	<tr></tr>
 	<tr></tr>
 	<tr></tr>	
-    
-     
 
 </tbody></table>
+
+<h2>Professional Service</h2>
+<ul>
+<li><p>Journal Reviewer: Optimization and Enigneering, Computional Optimization and Applications</p>
+</li>
+</ul>
 
 
 <div id="footer">
