--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
 <h2>Professional Service</h2>
 <ul>
-<li><p>Journal Reviewer: Optimization and Enigneering, Computional Optimization and Applications</p>
+<li><p>Journal Reviewer: Optimization and Enigneering, Computational Optimization and Applications</p>
 </li>
 </ul>
 
