--- a/index.html
+++ b/index.html
@@ -99,8 +99,9 @@
 <p style="text-align:justify; text-justify:inter-ideograph;">
 	Xiaoyi Qu is a third-year Ph.D. student in the Department of Industrial and Systems Engineering at Lehigh University, 
 	advised by Prof.<a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;> Daniel P. Robinson</a>. 
-	In the summer of 2024, he interned at Microsoft's Applied Sciences Group 
-	(<a href="https://www.microsoft.com/applied-sciences/?msockid=2aaecc043ad26f493eb7d9693b836e27" target=&ldquo;blank&rdquo;>ASG</a>) working on model compression. 
+	He has industry experience through internships at <a href="https://www.neusoftmedical.com/en/" target=&ldquo;blank&rdquo;>Neusoft Medical</a> in 2019 and, more recently, at Microsoft's Applied 
+	Sciences Group (<a href="https://www.microsoft.com/applied-sciences/?msockid=2aaecc043ad26f493eb7d9693b836e27" target=&ldquo;blank&rdquo;>ASG</a>) in 2024, 
+	where he worked on model compression.
 	His research centers on constrained structured optimization and efficient AI techniques such as pruning and 
 	quantization. More recently, he has become particularly interested in improving the training and inference efficiency 
 	of large language models (LLMs).
