--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <link rel="shortcut icon" href="myIcon.ico">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-<meta name="keywords" content="Chaoyan Huang, Huang Chaoyan, Chaoyan, The Chinese University of Hong Kong, Chaoyan, Huang Chaoyan, 黄朝燕, 朝燕, 香港中文大学"> 
+<meta name="keywords" content="Xiaoyi Qu"> 
 <meta name="description" content="Chaoyan Huang's home page">
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
-<title>Chaoyan Huang</title>
+<title>Xiaoyi Qu</title>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
