--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				</div>
 
 				<p>
-					PhD candidate,<br>
+					PhD student <br>
 					Department of Industrial and Systems Engineering,<br>
                     Lehigh University,<br>
                     200 W Packer Ave. Bethlehem, PA 18015.<br>
