--- a/index.html
+++ b/index.html
@@ -190,6 +190,12 @@
 </li>
 </ul>
 
+<h2>Useful Links</h2>
+<ul>
+<li><p><a href="https://www.educatum.com/engineering-blogs-in-ai-ml-system-design">System Design in Tech Industry</a></p>
+</li>
+</ul>
+
 
 <div id="footer">
 	<div id="footer-text"></div>
