Add new profile

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</p><br>
 			</td>
 			<td>
-				<img src="./img/snapshot.jpg" border="0" width="200"><br>
+				<img src="./img/Profile_Xiaoyi.jpg" border="0" width="200"><br>
 			</td>
 		</tr>
 		<tr>
