--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   
 <h2>Biography</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	Xiaoyi Qu is a third-year Ph.D. student in the Department of Industrial and Systems Engineering at Lehigh University, 
+	Xiaoyi Qu is a fourth-year Ph.D. student in the Department of Industrial and Systems Engineering at Lehigh University, 
 	advised by Prof.<a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;> Daniel P. Robinson</a>. 
 	He has industry experience through internships at <a href="https://www.neusoftmedical.com/en/" target=&ldquo;blank&rdquo;>Neusoft Medical</a> in 2019 and, more recently, at Microsoft's Applied 
 	Sciences Group (<a href="https://www.microsoft.com/applied-sciences/?msockid=2aaecc043ad26f493eb7d9693b836e27" target=&ldquo;blank&rdquo;>ASG</a>) in 2024, 
@@ -128,7 +128,8 @@
 	<td> <a href="./img/PG_equality.png" target="_blank"> A Proximal Gradient Method for Equality Constrained Optimization</a> <br />
         [<img class="eq" src="./img/7227645438722938594-130.png" alt="alpha" style="vertical-align: -1px" />] Yutong Dai, <b>Xiaoyi Qu</b>, Daniel P. Robinson. <br />
         <i style="color: Tomato;"> 2025 Van Hoesen Family Best Publication Award (Honorable Mention) </i> <br />
-        <i>Accepted by SIAM Journal on Optimization (<i><b>SIOPT</b></i>) </i>, 2025 <br />
+        <i style="color: #555;">SIAM Journal on Optimization (<i><b>SIOPT</b></i>), 2025</i> <br />
+		[<a href="https://epubs.siam.org/doi/10.1137/24M1653586">Paper</a>]
         [<a href="https://arxiv.org/abs/2404.07460">arXiv</a>] <br />
 	</td>
 </tr>
@@ -173,7 +174,7 @@
 	<td width="206">
 	<img src="./img/PG_general.png" width="200" height = "160" style="box-shadow: 4px 4px 8px #888">
 </td>	
-<td> <a href="./img/PG_general.png" target="_blank">A Proximal Gradient Method for Regularization Optimization with General Constraints</a><br>
+<td> <a href="./img/PG_general.png" target="_blank">A Proximal Gradient Method for Regularized Optimization with General Constraints</a><br>
 	[<img class="eq" src="./img/7227645438722938594-130.png" alt="alpha" style="vertical-align: -1px" />] Frank E. Curtis, <b>Xiaoyi Qu </b>, Daniel P. Robinson. <br>
 	<i>Working Paper. (Coming soon)</i> <br />
 	</td>
@@ -181,6 +182,20 @@
 	<tr></tr>
 	<tr></tr>
 	<tr></tr>	
+
+<tr>	
+	<td width="206">
+	<img src="./img/medical_agent.jpg" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+	</td>		
+	<td>
+		<a href="./img/medical_agent.jpg" target="_blank">Multi-Agent Medical Decision Consensus Matrix System: An Intelligent Collaborative Framework for Oncology MDT Consultation
+		</a><br />
+		Xudong Han, Hsiang Lun Kao, <b>Xiaoyi Qu</b>, Ziqian Bi, Chuanzhen Wang, Zhenyu Yu. <br />
+	</td>
+</tr>
+<tr></tr>
+<tr></tr>
+<tr></tr>
 
 </tbody></table>
 
