--- a/index.html
+++ b/index.html
@@ -168,7 +168,22 @@
 </tr>
 <tr></tr>
 <tr></tr>
-<tr></tr>	   
+<tr></tr>	
+
+<tr>	
+	<td width="206">
+	<img src="./img/medical_agent.jpg" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+	</td>		
+	<td>
+		<a href="./img/medical_agent.jpg" target="_blank">Multi-Agent Medical Decision Consensus Matrix System: An Intelligent Collaborative Framework for Oncology MDT Consultation
+		</a><br />
+		Xudong Han, Hsiang Lun Kao, <b>Xiaoyi Qu</b>, Ziqian Bi, Chuanzhen Wang, Zhenyu Yu. <br />
+		<i>Under review</i> <br />
+	</td>
+</tr>
+<tr></tr>
+<tr></tr>
+<tr></tr>
 
 <tr>	
 	<td width="206">
@@ -181,21 +196,7 @@
     </tr>
 	<tr></tr>
 	<tr></tr>
-	<tr></tr>	
-
-<tr>	
-	<td width="206">
-	<img src="./img/medical_agent.jpg" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-	</td>		
-	<td>
-		<a href="./img/medical_agent.jpg" target="_blank">Multi-Agent Medical Decision Consensus Matrix System: An Intelligent Collaborative Framework for Oncology MDT Consultation
-		</a><br />
-		Xudong Han, Hsiang Lun Kao, <b>Xiaoyi Qu</b>, Ziqian Bi, Chuanzhen Wang, Zhenyu Yu. <br />
-	</td>
-</tr>
-<tr></tr>
-<tr></tr>
-<tr></tr>
+	<tr></tr>
 
 </tbody></table>
 
