--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 <ul>
 <li><p>Journal Reviewer: Optimization and Enigneering, Computational Optimization and Applications</p>
 </li>
-<li><p>Conference Reviewer: Constrained Optimization for Machine Learning (COML) Workshop, NeurIPS 2025</p>
+<li><p>Conference Reviewer: Constrained Optimization for Machine Learning (COML) Workshop, NeurIPS 2025; ICASSP 2026</p>
 </li>
 </ul>
 
