--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
 	</td>		
 	<td> <a href="./img/PG_equality.png" target="_blank"> A Proximal Gradient Method for Equality Constrained Optimization</a> <br />
         [<img class="eq" src="./img/7227645438722938594-130.png" alt="alpha" style="vertical-align: -1px" />] Yutong Dai, <b>Xiaoyi Qu</b>, Daniel P. Robinson. <br />
-        <i style="color: Tomato;"> 2025 Van Hoesen Family Best Publication Award (Honorable Mention) </i> <br />
         <i style="color: #555;">SIAM Journal on Optimization (<i><b>SIOPT</b></i>), 2025</i> <br />
+		<i style="color: Tomato;"> 2025 Van Hoesen Family Best Publication Award (Honorable Mention) </i> <br />
 		[<a href="https://epubs.siam.org/doi/10.1137/24M1653586">Paper</a>]
         [<a href="https://arxiv.org/abs/2404.07460">arXiv</a>] <br />
 	</td>
@@ -177,8 +177,9 @@
 	<td>
 		<a href="./img/medical_agent.jpg" target="_blank">Multi-Agent Medical Decision Consensus Matrix System: An Intelligent Collaborative Framework for Oncology MDT Consultation
 		</a><br />
-		Xudong Han, Hsiang Lun Kao, <b>Xiaoyi Qu</b>, Ziqian Bi, Chuanzhen Wang, Zhenyu Yu. <br />
-		<i>Under review</i> <br />
+		Xudong Han, Xianglun Gao, <b>Xiaoyi Qu</b>, Zhenyu Yu. <br />
+		<i>arXiv preprint, 2025</i> <br />
+        [<a href="https://arxiv.org/abs/2512.14321">arXiv</a>]
 	</td>
 </tr>
 <tr></tr>
