--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@
 
 <tr>	
 	<td width="206">
-	<img src="./img/medical_agent.jpg" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+	<img src="./img/medical_agent.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 	</td>		
 	<td>
-		<a href="./img/medical_agent.jpg" target="_blank">Multi-Agent Medical Decision Consensus Matrix System: An Intelligent Collaborative Framework for Oncology MDT Consultation
+		<a href="./img/medical_agent.png" target="_blank">Multi-Agent Medical Decision Consensus Matrix System: An Intelligent Collaborative Framework for Oncology MDT Consultation
 		</a><br />
 		Xudong Han, Xianglun Gao, <b>Xiaoyi Qu</b>, Zhenyu Yu. <br />
 		<i>arXiv preprint, 2025</i> <br />
