Add funny stuff

--- a/index.html
+++ b/index.html
@@ -98,14 +98,16 @@
 <h2>Biography</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
 	Xiaoyi Qu is a fourth-year Ph.D. student in the Department of Industrial and Systems Engineering at Lehigh University, 
-	advised by Prof.<a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;> Daniel P. Robinson</a>. 
-	He has industry experience through internships at <a href="https://www.neusoftmedical.com/en/" target=&ldquo;blank&rdquo;>Neusoft Medical</a> in 2019 and, more recently, at Microsoft's Applied 
-	Sciences Group (<a href="https://www.microsoft.com/applied-sciences/?msockid=2aaecc043ad26f493eb7d9693b836e27" target=&ldquo;blank&rdquo;>ASG</a>) in 2024, 
-	where he worked on model compression.
-	His research centers on constrained structured optimization and efficient AI techniques such as pruning and 
-	quantization. More recently, he has become particularly interested in improving the training and inference efficiency 
-	of large language models (LLMs).
+	under the supervision of Prof. <a href="https://coral.ise.lehigh.edu/danielprobinson/" target="blank">Daniel P. Robinson</a>. 
+	His research focuses on two primary directions: (i) the development and theoretical analysis of first-order optimization methods 
+	for constrained structured problems, and (ii) the design of pruning and quantization methodologies aimed at mitigating storage and 
+	inference inefficiencies in large-scale language models. In 2024, he served as a research intern with Microsoft’s Applied Sciences 
+	Group (<a href="https://www.microsoft.com/applied-sciences/?msockid=2aaecc043ad26f493eb7d9693b836e27" target="blank">ASG</a>), where 
+	his work centered on joint pruning and quantization techniques. Prior to this, he was an acoustic test intern at 
+	<a href="https://www.neusoftmedical.com/en/" target="blank">Neusoft Medical</a> in 2019.
+</p>
 
+ 
 <h2>Education</h2>
 <ul>
 <li><p>Ph.D., Industrial Engineering, Lehigh University, Bethlehem, PA, USA, 2022&ndash;current</p>
@@ -212,11 +214,20 @@
 </li>
 </ul>
 
-<h2>Useful Links</h2>
+
+<h2>Non-academic Stuff</h2>
+<ul>
+<li><p>I am originally from Shenyang, which was once the fifth-largest city in China.</p>
+<li><p>I am a big fan of Cantonese roast duck and once drove 2 hours just to pick one up from a local store.</p>
+<li><p>Since childhood, I have dreamed of becoming a geologist, partly for the chance to travel across the nation for free.</p>
+</li>
+</ul>
+
+<!-- <h2>Useful Links</h2>
 <ul>
 <li><p><a href="https://www.educatum.com/engineering-blogs-in-ai-ml-system-design">System Design in Tech Industry</a></p>
 </li>
-</ul>
+</ul> -->
 
 
 <div id="footer">
