--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
 <p style="text-align:justify; text-justify:inter-ideograph;">
 	Xiaoyi Qu is a fourth-year Ph.D. student in the Department of Industrial and Systems Engineering at Lehigh University, 
 	under the supervision of Prof. <a href="https://coral.ise.lehigh.edu/danielprobinson/" target="blank">Daniel P. Robinson</a>. 
-	His research focuses on two primary directions: (i) the development and theoretical analysis of first-order optimization methods 
-	for constrained structured problems, and (ii) the design of pruning and quantization methodologies aimed at mitigating storage and 
-	inference inefficiencies in large-scale language models. In 2024, he served as a research intern with Microsoft’s Applied Sciences 
+	His research focuses on two primary directions: (i) the development and theoretical analysis of first-order methods 
+	for solvinig constrained structured optimization problems, and (ii) the design of pruning and quantization methodologies aimed at mitigating storage and 
+	inference inefficiencies in large-scale language models. In 2024, he worked as a research intern with Microsoft's Applied Sciences 
 	Group (<a href="https://www.microsoft.com/applied-sciences/?msockid=2aaecc043ad26f493eb7d9693b836e27" target="blank">ASG</a>), where 
 	his work centered on joint pruning and quantization techniques. Prior to this, he was an acoustic test intern at 
 	<a href="https://www.neusoftmedical.com/en/" target="blank">Neusoft Medical</a> in 2019.
@@ -217,7 +217,7 @@
 
 <h2>Non-academic Stuff</h2>
 <ul>
-<li><p>I am originally from Shenyang, which was once the fifth-largest city in China.</p>
+<li><p>I am originally from northeastern China.</p>
 <li><p>I am a big fan of Cantonese roast duck and once drove 2 hours just to pick one up from a local store.</p>
 <li><p>Since childhood, I have dreamed of becoming a geologist, partly for the chance to travel across the nation for free.</p>
 </li>
